// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should show tooltip when hovering slider handler 1`] = `
<div data-v-app=""></div>
<div data-v-app="">
  <div tabindex="-1" class="xy-slider xy-slider-horizontal">
    <div class="xy-slider-rail"></div>
    <div class="xy-slider-track" style="left: 0%; width: 30%;"></div>
    <div class="xy-slider-step"></div><!--teleport start--><!--teleport end-->
    <div class="xy-tooltip-open xy-slider-handle" style="left: 30%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" aria-disabled="false"></div>
    <div class="xy-slider-mark"></div>
  </div>
</div>
<div style="position: absolute; top: 0px; left: 0px; width: 100%;">
  <div><!---->
    <div class="xy-tooltip xy-slider-tooltip" style="">
      <div class="xy-tooltip-content">
        <div class="xy-tooltip-arrow"><span class="xy-tooltip-arrow-content"></span></div>
        <div class="xy-tooltip-inner" role="tooltip">30</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should show tooltip when hovering slider handler 2`] = `
<div data-v-app=""></div>
<div data-v-app="">
  <div tabindex="-1" class="xy-slider xy-slider-horizontal">
    <div class="xy-slider-rail"></div>
    <div class="xy-slider-track" style="left: 0%; width: 30%;"></div>
    <div class="xy-slider-step"></div><!--teleport start--><!--teleport end-->
    <div class="xy-slider-handle" style="left: 30%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" aria-disabled="false"></div>
    <div class="xy-slider-mark"></div>
  </div>
</div>
<div style="position: absolute; top: 0px; left: 0px; width: 100%;">
  <div><!---->
    <div class="xy-tooltip xy-slider-tooltip" style="display: none;">
      <div class="xy-tooltip-content">
        <div class="xy-tooltip-arrow"><span class="xy-tooltip-arrow-content"></span></div>
        <div class="xy-tooltip-inner" role="tooltip">30</div>
      </div>
    </div>
  </div>
</div>
`;
